# zerepoch

./: ARCHITECTURE.adoc  CONTRIBUTING.adoc  README.adoc  cabal.project  ci.nix  default.nix  flake.nix  release.nix  shell.nix  stack.yaml
quickcheck-dynamic/: quickcheck-dynamic.cabal
simeon/: ARCHITECTURE.adoc  README.md  solomon.cabal
simeon-actus/: ARCHITECTURE.adoc  README.md  simeon-actus.cabal
simeon-actus/app/: Main.hs
simeon-actus/test/: Spec.hs
simeon-actus/testkit/: Main.hs
simeon/pab/: Main.hs  SimeonContract.hs
simeon/src/Language/: Simeon.hs
simeon/test/: Spec.hs  SpecLongRunning.hs
zerepoch-benchmark/: README.md  bench-compare-markdown  gideon-benchmark.cabal  zerepoch-benchmark.cabal
zerepoch-benchmark/nofib/: README.md
zerepoch-benchmark/nofib/bench/: BenchHaskell.hs  BenchPlc.hs  Common.hs
zerepoch-benchmark/nofib/exe/: Main.hs  README.md
zerepoch-benchmark/nofib/test/: Spec.hs
zerepoch-benchmark/validation/: Main.hs  README.md
zerepoch-chain-index/: README.md  zerepoch-chain-index.cabal
zerepoch-chain-index/app/: CommandLine.hs  Config.hs  Logging.hs  Main.hs
zerepoch-chain-index/src/Zerepoch/: ChainIndex.hs
zerepoch-chain-index/test/: Generators.hs  Spec.hs
zerepoch-contract/: ARCHITECTURE.adoc  README.md  gideon-contract.cabal  zerepoch-contract.cabal
zerepoch-contract/src/Wallet/: Graph.hs  Rollup.hs  Types.hs
zerepoch-contract/src/Zerepoch/: Contract.hs  Trace.hs
zerepoch-contract/test/: Spec.hs
zerepoch-contract/test/Spec/: Contract.hs  Emulator.hs  Rows.hs  State.hs  ThreadToken.hs
zerepoch-core/: ARCHITECTURE.adoc  README.md  zerepoch-core.cabal
zerepoch-core/common/: Common.hs  ErrorCode.hs  PlcTestUtils.hs
zerepoch-core/cost-model/: CostModel.md
zerepoch-core/cost-model/budgeting-bench/: Bench.hs  Nops.hs
zerepoch-core/cost-model/create-cost-model/: CostModelCreation.hs  UpdateCostModel.hs
zerepoch-core/cost-model/data/: models.R
zerepoch-core/cost-model/test/: TestCostModels.hs
zerepoch-core/docs/: Builtins.md  Holed types.md  Saturatedness.md  Typechecking PIR.md  ethereum-gas-metering.rst
zerepoch-core/executables/: Common.hs
zerepoch-core/executables/pir/: Main.hs  README.md
zerepoch-core/executables/plc/: Main.hs
zerepoch-core/executables/uplc/: Main.hs
zerepoch-core/generators/ZerepochCore/: Generators.hs
zerepoch-core/prelude/: ZerepochPrelude.hs
zerepoch-core/untyped-zerepoch-core/src/: NewUntypedZerepochCore.hs  UntypedZerepochCore.hs
zerepoch-core/untyped-zerepoch-core/test/: Spec.hs
zerepoch-core/zerepoch-core/src/: ZerepochCore.hs
zerepoch-core/zerepoch-core/test/: Spec.hs
zerepoch-core/zerepoch-ir/src/: ZerepochIR.hs
zerepoch-core/zerepoch-ir/test/: NamesSpec.hs  ParserSpec.hs  Spec.hs  TestLib.hs  TransformSpec.hs  TypeSpec.hs
zerepoch-errors/: README.md  zerepoch-errors.cabal
zerepoch-errors/src/: Errors.hs
zerepoch-errors/src/Errors/: Docs.hs
zerepoch-ledger/: ARCHITECTURE.adoc  README.md  zerepoch-ledger.cabal
zerepoch-ledger-api/: zerepoch-ledger-api.cabal
zerepoch-ledger-api/test/: Spec.hs
zerepoch-ledger-api/test/Spec/: Interval.hs  Time.hs
zerepoch-ledger/src/: Ledger.hs
zerepoch-ledger/src/Ledger/: Address.hs  AddressMap.hs  Blockchain.hs  Contexts.hs  Crypto.hs  Fee.hs  Generators.hs  Index.hs  Oracle.hs  Orphans.hs  Scripts.hs  TimeSlot.hs  Tokens.hs  Tx.hs
zerepoch-ledger/test/: Spec.hs
zerepoch-metatheory/: .gitignore  ARCHITECTURE.adoc  README.md  build.txt  gideon-metatheory.cabal  zerepoch-metatheory.cabal
zerepoch-metatheory/exe/: Main.hs
zerepoch-metatheory/src/: Builtin.lagda.md  Main.lagda  Opts.hs  Raw.hs  Scoped.hs  Scoped.lagda  Untyped.hs  Untyped.lagda.md  Utils.lagda  index.lagda.md
zerepoch-metatheory/src/Declarative/: Examples.lagda.md
zerepoch-metatheory/test/: AddInteger.agda  IntegerLiteral.agda  IntegerOverflow.agda  Negation.agda  StringLiteral.agda  TestDetailed.hs  TestNEAT.hs  TestSimple.hs
zerepoch-pab/: ARCHITECTURE.adoc  README.md  zerepoch-pab.cabal  zerepoch-pab.yaml.sample
zerepoch-pab/app/: CommandParser.hs  Main.hs
zerepoch-pab/examples/: ContractExample.hs  Main.hs  README.md
zerepoch-pab/examples/ContractExample/: AtomicSwap.hs  PayToWallet.hs  WaitForTx.hs
zerepoch-pab/examples/uniswap/: Main.hs
zerepoch-pab/src/Bcc/: Chain.hs
zerepoch-pab/sync-client/: Main.hs
zerepoch-pab/test/: README.md
zerepoch-pab/test-node/: configuration.yaml  start-aurum-purple-node.sh  start-node-01.sh  start-node-02.sh  start-testnet-node.sh
zerepoch-pab/test-node/aurum-purple/: aurum-purple-config.json  aurum-purple-sophie-genesis.json  aurum-purple-topology.json
zerepoch-pab/test-node/genesis/: genesis.aurum.json  genesis.json  genesis.spec.json
zerepoch-pab/test-node/testnet/: testnet-config.json  testnet-sophie-genesis.json  testnet-topology.json
zerepoch-pab/test-psgenerator/: TestPSGenerator.hs
zerepoch-pab/test/full/: Spec.hs  SpecLongRunning.hs
zerepoch-pab/test/light/: Spec.hs
zerepoch-pab/tx-inject/: Main.hs  config.yaml  start-all-servers.sh
zerepoch-pab/tx-inject/TxInject/: RandomTx.hs
zerepoch-tx/: ARCHITECTURE.adoc  README.md  zerepoch-tx.cabal
zerepoch-tx-plugin/: ARCHITECTURE.adoc  README.md  zerepoch-tx-plugin.cabal
zerepoch-tx-plugin/src/ZerepochTx/: PIRTypes.hs  PLCTypes.hs  Plugin.hs
zerepoch-tx-plugin/test/: Lib.hs
zerepoch-tx-plugin/test/IsData/: Spec.hs
zerepoch-tx-plugin/test/Lift/: Spec.hs
zerepoch-tx-plugin/test/Plugin/: Lib.hs
zerepoch-tx-plugin/test/StdLib/: Spec.hs
zerepoch-tx-plugin/test/TH/: Spec.hs  TestTH.hs
zerepoch-tx/src/: ZerepochTx.hs
zerepoch-tx/src/ZerepochTx/: Applicative.hs  AssocMap.hs  Bool.hs  Builtins.hs  Code.hs  Either.hs  Enum.hs  Eq.hs  Evaluation.hs  Foldable.hs  Functor.hs  IsData.hs  Lattice.hs  Lift.hs  List.hs  Maybe.hs  Monoid.hs  Numeric.hs  Ord.hs  Prelude.hs  Ratio.hs  Semigroup.hs  Sqrt.hs  TH.hs  These.hs  (+3 more)
zerepoch-tx/test/: Spec.hs
zerepoch-use-cases/: ARCHITECTURE.adoc  README.md  default.nix  zerepoch-use-cases.cabal
zerepoch-use-cases/scripts/: Main.hs  protocol-parameters.json
(+1165 files in other folders)
